# dcap-verify

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  mise.toml
dcap-differ/: Cargo.toml  FINDINGS.md  known-dangerous.json
dcap-differ/corpus-committed/control-fresh-eval19/: collateral.json  meta.json
dcap-differ/corpus-committed/tA-both-19/: meta.json
dcap-differ/corpus-committed/tA-qe-19/: collateral.json  meta.json
dcap-differ/corpus-committed/tA-tcb-19/: collateral.json  meta.json
dcap-differ/corpus-committed/tB-fmspc-00806f050000/: collateral.json  meta.json
dcap-differ/corpus-committed/tB-fmspc-00906ed50000/: collateral.json  meta.json
dcap-differ/corpus-committed/tC-crl-platform-body-processor-chain/: collateral.json  meta.json
dcap-differ/corpus-committed/tC-crl-platform-full/: collateral.json  meta.json
dcap-differ/corpus-committed/tC-crl-processor-body-platform-chain/: collateral.json  meta.json
dcap-differ/corpus-committed/tD-crl-swap/: collateral.json  meta.json
dcap-differ/corpus-committed/tD-qe-in-tcb-slot/: collateral.json  meta.json
dcap-differ/corpus-committed/tD-qve-as-qe/: collateral.json  meta.json
dcap-differ/corpus-committed/tD-tcb-in-qe-slot/: collateral.json  meta.json
dcap-differ/corpus-committed/tD-tdx-tcb-as-tcb/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-pckcrlchain-root-twice/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-qechain-leaf-only/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-tcbchain-is-pckcrlchain/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-tcbchain-leaf-only/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-tcbchain-reversed/: collateral.json  meta.json
dcap-differ/corpus-committed/tE-tcbchain-root-twice/: collateral.json  meta.json
dcap-differ/corpus-committed/tF-cert-intel-sgx-pck-certificate-notafter-eq/: meta.json
dcap-differ/corpus-committed/tF-cert-intel-sgx-pck-certificate-notafter-minus1/: meta.json
dcap-differ/corpus-committed/tF-cert-intel-sgx-pck-certificate-notafter-plus1/: meta.json
dcap-differ/src/: main.rs  pipeline.rs  rng.rs  sweep.rs
dcap-differ/tools/: build_recombination_corpus.py
dcap-verify/: Cargo.toml
dcap-verify/examples/: eval_standing.rs
dcap-verify/fuzz/: Cargo.toml
dcap-verify/src/: error.rs  lib.rs  pki.rs  policy.rs  synthetic_e2e.rs  tcb.rs  types.rs  verify.rs
dcap-verify/tests/: conformance.rs  fixtures.rs  peek.rs  policy.rs  regression.rs  robustness.rs
(+63 files in other folders)
