[workspace]
resolver = "3"
members = ["dcap-verify"]
exclude = ["dcap-verify/fuzz", "dcap-differ"]

[workspace.dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
hex = { version = "0.4.3", features = ["alloc", "serde"] }
p256 = "0.14.0"
pem = "3.0.6"
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value", "preserve_order"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
x509-parser = "0.18.1"
