[package]
name = "dcap-differ"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "Differential-testing harness: dcap-verify vs Intel QVL"

[dependencies]
dcap-verify = { path = "../dcap-verify" }
intel-tee-quote-verification-rs = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
pem = "3"

[workspace]
members = ["."]
